# parent_ion_classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
conda-recipe/: conda_build_config.yaml  meta.yaml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md
scripts/: build_and_test.sh  build_script.sh  test_script.sh
src/parent_ion_classifier/: __init__.py  classifier.py  data_canonizer.py  main.py  test.py  utils.py
src/parent_ion_classifier/config/: __init__.py  model_config.json  model_config.py
src/parent_ion_classifier/models/: __init__.py  loader.py  manager.py
src/parent_ion_classifier/test/: spectra_dict.pkl  spectra_dict_none_norm.pkl  spectra_dict_sigmoid_norm.pkl  spectra_dict_softmax_norm.pkl  spectra_dict_softmax_per_ionization_norm.pkl
